Change some texts

--- a/MAGNET.ipynb
+++ b/MAGNET.ipynb
@@ -31,9 +31,9 @@
       "cell_type": "markdown",
       "source": [
         "### C Code\n",
-        "**Artificial Test Dataset Used -**https://docs.google.com/spreadsheets/d/1KaqRN2SzVxtRMPvIvwpXUomcN41FDrAqoWW_88X1owM/edit?usp=sharing\n",
+        "**Test Dataset Used -**https://docs.google.com/spreadsheets/d/1KaqRN2SzVxtRMPvIvwpXUomcN41FDrAqoWW_88X1owM/edit?usp=sharing\n",
         "\n",
-        "**Manual Computation Testing -**\n",
+        "**Sample Manual Computation Testing -**\n",
         "https://docs.google.com/spreadsheets/d/1P4VrBK_uCHIrjgCkf5wXhvakFBDHCyEU/edit?usp=sharing&ouid=108923980891918456197&rtpof=true&sd=true"
       ],
       "metadata": {
