added manual time to cuda

--- a/MAGNET.ipynb
+++ b/MAGNET.ipynb
@@ -42,20 +42,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "YKM47iYvKSqI",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "ac449602-37a6-48e8-df9e-59f5aa3408c3"
+        "outputId": "6f631175-baa0-40fe-939c-71bffb5ff095"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Writing magnet.c\n"
+            "Overwriting magnet.c\n"
           ]
         }
       ],
@@ -97,7 +97,7 @@
         "  printf(\"Number of rejected sequences: %d\\n\", rejectedCount);\n",
         "  printf(\"Number of sequences processed: %d\\n\", numSequences);\n",
         "  printf(\"Number of runs: 10\\n\");\n",
-        "  printf(\"Average time taken: %f microseconds\\n\", elapse / 10);\n",
+        "  printf(\"Average time taken: %f milliseconds\\n\", elapse / 10);\n",
         "  printf(\"Number of errors: %d\\n\", errors);\n",
         "}\n",
         "\n",
@@ -394,9 +394,11 @@
         "            start = clock();\n",
         "\n",
         "            int result = MAGNET(refSequences[i], sequences[i], editThresholds[i], finalBitVector, HammingMask, &accepted);\n",
-        "            int checker = MAGNET(refSequences[i], sequences[i], editThresholds[i], finalBitVectorC, HammingMask, &acceptedC);\n",
         "\n",
         "            end = clock();\n",
+        "\n",
+        "            int checker = MAGNET(refSequences[i], sequences[i], editThresholds[i], finalBitVectorC, HammingMask, &acceptedC);\n",
+        "\n",
         "            time = ((double)(end - start)) * 1E3 / CLOCKS_PER_SEC;\n",
         "            elapse += time;\n",
         "\n",
@@ -444,9 +446,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "80c7fb7f-690e-4aa5-9a17-05568051f61d"
+        "outputId": "639cbd20-7560-47a7-f158-1e10518b6603"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5434,16 +5436,16 @@
             "Final Bit Vector: 0000000000010000000000000000000100010011000000000000000000010000000000000000000000000000000100000000\n",
             "Result: Accepted\n",
             "\n",
-            "Run 1 Time: 0.172000 seconds | Accepted: 335 | Rejected: 665\n",
-            "Run 2 Time: 0.179000 seconds | Accepted: 335 | Rejected: 665\n",
-            "Run 3 Time: 0.186000 seconds | Accepted: 335 | Rejected: 665\n",
-            "Run 4 Time: 0.168000 seconds | Accepted: 335 | Rejected: 665\n",
-            "Run 5 Time: 0.169000 seconds | Accepted: 335 | Rejected: 665\n",
-            "Run 6 Time: 0.163000 seconds | Accepted: 335 | Rejected: 665\n",
-            "Run 7 Time: 0.186000 seconds | Accepted: 335 | Rejected: 665\n",
-            "Run 8 Time: 0.194000 seconds | Accepted: 335 | Rejected: 665\n",
-            "Run 9 Time: 0.174000 seconds | Accepted: 335 | Rejected: 665\n",
-            "Run 10 Time: 0.175000 seconds | Accepted: 335 | Rejected: 665\n",
+            "Run 1 Time: 0.057000 seconds | Accepted: 335 | Rejected: 665\n",
+            "Run 2 Time: 0.056000 seconds | Accepted: 335 | Rejected: 665\n",
+            "Run 3 Time: 0.057000 seconds | Accepted: 335 | Rejected: 665\n",
+            "Run 4 Time: 0.063000 seconds | Accepted: 335 | Rejected: 665\n",
+            "Run 5 Time: 0.062000 seconds | Accepted: 335 | Rejected: 665\n",
+            "Run 6 Time: 0.056000 seconds | Accepted: 335 | Rejected: 665\n",
+            "Run 7 Time: 0.058000 seconds | Accepted: 335 | Rejected: 665\n",
+            "Run 8 Time: 0.059000 seconds | Accepted: 335 | Rejected: 665\n",
+            "Run 9 Time: 0.069000 seconds | Accepted: 335 | Rejected: 665\n",
+            "Run 10 Time: 0.059000 seconds | Accepted: 335 | Rejected: 665\n",
             "\n",
             "----- Statistics -----\n",
             "\n",
@@ -5451,7 +5453,7 @@
             "Number of rejected sequences: 665\n",
             "Number of sequences processed: 1000\n",
             "Number of runs: 10\n",
-            "Average time taken: 189.540500 microseconds\n",
+            "Average time taken: 67.529100 milliseconds\n",
             "Number of errors: 0\n"
           ]
         }
@@ -5481,7 +5483,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "qVuyQyu0pEGu",
-        "outputId": "8a9d8ab6-3b62-4fcc-be82-0cb5b63aad80"
+        "outputId": "f9003eab-4ba9-4e5f-e692-cad132080a1a"
       },
       "execution_count": null,
       "outputs": [
@@ -5489,7 +5491,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Mon Mar 31 08:06:43 2025       \n",
+            "Thu Apr  3 01:02:27 2025       \n",
             "+-----------------------------------------------------------------------------------------+\n",
             "| NVIDIA-SMI 550.54.15              Driver Version: 550.54.15      CUDA Version: 12.4     |\n",
             "|-----------------------------------------+------------------------+----------------------+\n",
@@ -5498,7 +5500,7 @@
             "|                                         |                        |               MIG M. |\n",
             "|=========================================+========================+======================|\n",
             "|   0  Tesla T4                       Off |   00000000:00:04.0 Off |                    0 |\n",
-            "| N/A   53C    P8             10W /   70W |       0MiB /  15360MiB |      0%      Default |\n",
+            "| N/A   35C    P8              9W /   70W |       0MiB /  15360MiB |      0%      Default |\n",
             "|                                         |                        |                  N/A |\n",
             "+-----------------------------------------+------------------------+----------------------+\n",
             "                                                                                         \n",
@@ -5518,8 +5520,7 @@
       "source": [
         "%%writefile magnetCUDA.cu\n",
         "\n",
-        "// biggest changes ig\n",
-        "// [x] uses cudaMallloc to allocate memory on the gpu\n",
+        "// [x] uses cudaMalloc to allocate memory on the gpu\n",
         "// [x] cudaMemcpy is used to transfer data between cpu and gpu\n",
         "// [x] cudaMallocHost allocates pinned memory that can be transferred more efficiently\n",
         "// [x] cudaFree and cudaFreeHost for memory cleanup\n",
@@ -5532,9 +5533,6 @@
         "\n",
         "// basically what happens for each sequence:\n",
         "// transfers data to gpu -> launches kernels to compute alignment -> retrieves results from gpu -> extracts magnet mask -> determines if sequences match\n",
-        "\n",
-        "// to test:\n",
-        "// [] super laaaaaarge datasets but still shortreads\n",
         "\n",
         "#include <stdio.h>\n",
         "#include <stdlib.h>\n",
@@ -5865,6 +5863,8 @@
         "    int accepted, result = 0;\n",
         "    int check = 0;\n",
         "    int errorCount;\n",
+        "    float time = 0.0;\n",
+        "    float elapse = 0.0;\n",
         "\n",
         "    cudaDeviceReset();\n",
         "    cudaFree(0);\n",
@@ -5921,13 +5921,28 @@
         "\n",
         "    for (int run = 0; run < 10; run++) {\n",
         "        int acceptedCount = 0, rejectedCount = 0;\n",
+        "         cudaEvent_t startT, endT;\n",
+        "        cudaEventCreate(&startT);\n",
+        "        cudaEventCreate(&endT);\n",
         "\n",
         "        for (int i = 0; i < numSequences; i++) {\n",
+        "\n",
+        "            cudaEventRecord(startT);\n",
+        "            cudaEventSynchronize(startT);\n",
         "            result = magnetCuda(refSequences[i], sequences[i], editThresholds[i],\n",
         "                                finalBitVector, hammingMasks, &accepted);\n",
+        "            cudaDeviceSynchronize();\n",
+        "            cudaEventRecord(endT);\n",
+        "\n",
+        "            cudaEventSynchronize(endT);\n",
         "\n",
         "            check = magnetCuda(refSequences[i], sequences[i], editThresholds[i],\n",
         "                               finalBitVector, hammingMasks, &accepted);\n",
+        "\n",
+        "            cudaEventElapsedTime(&time, startT, endT);\n",
+        "            elapse += time;\n",
+        "\n",
+        "\n",
         "\n",
         "            if (accepted) {\n",
         "                acceptedCount++;\n",
@@ -5940,14 +5955,22 @@
         "            }\n",
         "        }\n",
         "\n",
+        "        cudaEventDestroy(startT);\n",
+        "            cudaEventDestroy(endT);\n",
+        "\n",
         "        printf(\"Run %d: Accepted: %d | Rejected: %d\\n\",\n",
         "               run + 1, acceptedCount, rejectedCount);\n",
         "    }\n",
         "\n",
+        "\n",
+        "\n",
         "    printf(\"\\n----- Statistics -----\\n\");\n",
         "    printf(\"Total Runs: 10\\n\");\n",
         "    printf(\"Number of sequences processed: %d\\n\", numSequences);\n",
-        "    printf(\"Number of errors: %d\\n\\n\", errorCount);\n",
+        "    printf(\"Number of errors: %d\\n\", errorCount);\n",
+        "    printf(\"Average time: %f ms\\n\\n\", elapse/10);\n",
+        "\n",
+        "\n",
         "\n",
         "    for (int i = 0; i < 2 * MAX_ERROR_THRESHOLD + 1; i++) {\n",
         "        cudaFreeHost(hammingMasks[i]);\n",
@@ -5962,15 +5985,15 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "efc651d7-4e36-4935-c607-14e4ebc4b00e"
+        "outputId": "4ff9384f-a61e-4c65-8779-5e7d7bdbce92"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Writing magnetCUDA.cu\n"
+            "Overwriting magnetCUDA.cu\n"
           ]
         }
       ]
@@ -5987,22 +6010,15 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "5725c6f2-290d-417b-f826-12b956425b47"
+        "outputId": "f94ba92a-f12e-4bf4-a04c-ecbc9c81c1ae"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "\u001b[1;30;43mStreaming output truncated to the last 5000 lines.\u001b[0m\n",
-            "Read Sequence: TCTATACTACAAATACAAAAAATTAGCCAGCCATGGTGGTGGGCGCCTGTAGTCCCAGCTACTCAGGAGGCTGAGGCAGGAGAATGAGGCAGGAGAATGG\n",
-            "Reference Sequence: AAAAAAAAAAAAATACAAAAAATTAGCTGGGCGTGGTGGTGGGCGCCTGTAGTCCCAGCTACTCAGGAGGCTGAGGCAGGAGAATGGCAAGAACCCAGGA\n",
-            "Edit Threshold: 0\n",
-            "Mask 0: 1110101101000000000000000001101010000000000000000000000000000000000000000000000000000011111111110101\n",
-            "Final Bit Vector: 1110101101000000000000000001101010000000000000000000000000000000000000000000000000000011111111110101\n",
-            "Result: Rejected\n",
-            "\n",
             "Sequence 382:\n",
             "Read Sequence: ACAACCCAATTAAGAAACGGGCCAGGCCTGGCGTGGTGGTGGGCGCCTGCAGTCCCAGCTACTCAGGAGGCTGAGGTGGGAAAATGGCGCGAACCCAGGA\n",
             "Reference Sequence: AAAAAAAAAAAAATACAAAAAATTAGCTGGGCGTGGTGGTGGGCGCCTGTAGTCCCAGCTACTCAGGAGGCTGAGGCAGGAGAATGGCAAGAACCCAGGA\n",
@@ -10970,32 +10986,39 @@
             "Total Runs: 10\n",
             "Number of sequences processed: 1000\n",
             "Number of errors: 0\n",
+            "Average time: 280.625031 ms\n",
             "\n",
-            "==540== Profiling application: ./magnetCUDA\n",
-            "==540== Profiling result:\n",
+            "==2430== Profiling application: ./magnetCUDA\n",
+            "==2430== Profiling result:\n",
             "            Type  Time(%)      Time     Calls       Avg       Min       Max  Name\n",
-            " GPU activities:   51.50%  110.56ms     21000  5.2640us  4.5110us  8.9920us  computeHammingAndErrorsKernel(char const *, char const *, int*, int*, int, int)\n",
-            "                   29.02%  62.299ms     42000  1.4830us  1.3750us  2.1120us  [CUDA memcpy DtoH]\n",
-            "                   11.22%  24.096ms     42000     573ns     511ns  1.1840us  [CUDA memcpy HtoD]\n",
-            "                    8.25%  17.713ms     21000     843ns     736ns  2.0800us  [CUDA memset]\n",
-            "      API calls:   37.81%  1.94250s     84000  23.124us  1.9960us  9.2031ms  cudaMalloc\n",
-            "                   35.95%  1.84724s     84001  21.990us  1.9960us  209.61ms  cudaFree\n",
-            "                   18.73%  962.30ms     84000  11.455us  3.7170us  3.7265ms  cudaMemcpy\n",
-            "                    4.40%  226.12ms     21000  10.767us  7.1620us  1.4358ms  cudaLaunchKernel\n",
-            "                    2.18%  112.15ms     21000  5.3400us  3.1340us  4.2600ms  cudaMemset\n",
-            "                    0.77%  39.751ms         2  19.876ms  687.27us  39.064ms  cudaDeviceReset\n",
-            "                    0.09%  4.5038ms     21000     214ns     142ns  18.418us  cudaGetLastError\n",
-            "                    0.03%  1.2849ms         1  1.2849ms  1.2849ms  1.2849ms  cuDeviceGetPCIBusId\n",
-            "                    0.02%  1.2047ms        41  29.381us  1.8240us  1.0997ms  cudaMallocHost\n",
-            "                    0.02%  832.74us        41  20.310us  3.5170us  671.25us  cudaFreeHost\n",
-            "                    0.00%  136.61us       114  1.1980us     110ns  53.249us  cuDeviceGetAttribute\n",
-            "                    0.00%  10.716us         1  10.716us  10.716us  10.716us  cuDeviceGetName\n",
-            "                    0.00%  2.3960us         1  2.3960us  2.3960us  2.3960us  cudaSetDeviceFlags\n",
-            "                    0.00%  1.8300us         1  1.8300us  1.8300us  1.8300us  cuDeviceTotalMem\n",
-            "                    0.00%  1.1910us         3     397ns     140ns     773ns  cuDeviceGetCount\n",
-            "                    0.00%     817ns         2     408ns     149ns     668ns  cuDeviceGet\n",
-            "                    0.00%     379ns         1     379ns     379ns     379ns  cuModuleGetLoadingMode\n",
-            "                    0.00%     289ns         1     289ns     289ns     289ns  cuDeviceGetUuid\n"
+            " GPU activities:   53.44%  131.51ms     21000  6.2620us  5.3430us  8.9280us  computeHammingAndErrorsKernel(char const *, char const *, int*, int*, int, int)\n",
+            "                   27.36%  67.332ms     42000  1.6030us  1.5030us  13.471us  [CUDA memcpy DtoH]\n",
+            "                   11.15%  27.429ms     42000     653ns     575ns  1.5040us  [CUDA memcpy HtoD]\n",
+            "                    8.05%  19.819ms     21000     943ns     863ns  1.6640us  [CUDA memset]\n",
+            "      API calls:   36.76%  2.17469s     84000  25.889us  2.0170us  9.7265ms  cudaMalloc\n",
+            "                   33.83%  2.00163s     84001  23.828us  2.0450us  182.06ms  cudaFree\n",
+            "                   18.15%  1.07363s     84000  12.781us  3.7340us  11.095ms  cudaMemcpy\n",
+            "                    4.31%  255.23ms     21000  12.153us  7.1330us  15.122ms  cudaLaunchKernel\n",
+            "                    2.27%  134.04ms     20000  6.7010us  1.6510us  2.9913ms  cudaEventSynchronize\n",
+            "                    1.89%  112.01ms     21000  5.3330us  3.2870us  112.01us  cudaMemset\n",
+            "                    1.18%  69.802ms     20000  3.4900us  2.2780us  217.97us  cudaEventRecord\n",
+            "                    0.55%  32.697ms     10000  3.2690us  1.8290us  582.38us  cudaDeviceSynchronize\n",
+            "                    0.51%  29.901ms         2  14.951ms  596.30us  29.305ms  cudaDeviceReset\n",
+            "                    0.42%  25.093ms     10000  2.5090us  1.4990us  564.03us  cudaEventElapsedTime\n",
+            "                    0.08%  4.8492ms     21000     230ns     122ns  89.789us  cudaGetLastError\n",
+            "                    0.03%  1.7401ms        41  42.441us  3.1040us  1.5376ms  cudaMallocHost\n",
+            "                    0.01%  816.54us        41  19.915us  3.5660us  631.84us  cudaFreeHost\n",
+            "                    0.00%  134.13us       114  1.1760us     103ns  53.935us  cuDeviceGetAttribute\n",
+            "                    0.00%  83.409us        20  4.1700us     885ns  38.886us  cudaEventCreate\n",
+            "                    0.00%  22.852us        20  1.1420us     408ns  2.2180us  cudaEventDestroy\n",
+            "                    0.00%  11.129us         1  11.129us  11.129us  11.129us  cuDeviceGetName\n",
+            "                    0.00%  8.0690us         1  8.0690us  8.0690us  8.0690us  cudaSetDeviceFlags\n",
+            "                    0.00%  5.5680us         1  5.5680us  5.5680us  5.5680us  cuDeviceGetPCIBusId\n",
+            "                    0.00%  1.2220us         3     407ns     117ns     880ns  cuDeviceGetCount\n",
+            "                    0.00%     689ns         2     344ns     147ns     542ns  cuDeviceGet\n",
+            "                    0.00%     517ns         1     517ns     517ns     517ns  cuModuleGetLoadingMode\n",
+            "                    0.00%     408ns         1     408ns     408ns     408ns  cuDeviceTotalMem\n",
+            "                    0.00%     259ns         1     259ns     259ns     259ns  cuDeviceGetUuid\n"
           ]
         },
         {
@@ -11004,7 +11027,7 @@
             "text/plain": []
           },
           "metadata": {},
-          "execution_count": 2
+          "execution_count": 14
         }
       ]
     }
